deploy/k8s/infrastructure/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexapay
  labels:
    name: nexapay
    environment: production
    cost-center: fintech
    managed-by: terraform
